package models

import (
	"database/sql"
	"fmt"
	"io/fs"

	_ "github.com/jackc/pgx/v4/stdlib"
	"github.com/pressly/goose/v3"
)

// PostgresConfig defines the Postgres config structure
type PostgresConfig struct {
	Host     string
	Port     string
	User     string
	Password string
	Database string
	SSLMode  string
}

// DefaultPostgresConfig defines the default Postgres config to be used during  development
func DefaultPostgresConfig() PostgresConfig {
	return PostgresConfig{
		Host:     "localhost",
		Port:     "5432",
		User:     "baloo",
		Password: "junglebook",
		Database: "lenslocked",
		SSLMode:  "disable",
	}
}

// String returns the Postgres DB connection string
func (cfg PostgresConfig) String() string {
	return fmt.Sprintf("host=%s port=%s user=%s password=%s dbname=%s sslmode=%s",
		cfg.Host, cfg.Port, cfg.User, cfg.Password, cfg.Database, cfg.SSLMode)
}

// Open opens a SQL connection with the provided Postgres DB. Callers should ensure that the connection is eventually closed via the `db.Close()` method
func Open(config PostgresConfig) (*sql.DB, error) {
	db, err := sql.Open("pgx", config.String())
	if err != nil {
		return nil, fmt.Errorf("open: %w", err)
	}

	return db, nil
}

// Migrate runs the Goose migrations located at `dir` in the DB object `db`
func Migrate(db *sql.DB, dir string) error {
	// Sets the goose dialect to postgres
	err := goose.SetDialect("postgres")
	if err != nil {
		return fmt.Errorf("migrate: %w", err)
	}

	err = goose.Up(db, dir)
	if err != nil {
		return fmt.Errorf("migrate: %w", err)
	}

	return nil
}

// MigrateFS sets the base filesystem of the migrations and undoes any changes after every action is completed. This ensures that the migration files are embedded into the binnary and are, therefore, always available
func MigrateFS(db *sql.DB, migrationsFS fs.FS, dir string) error {
	// Prevent any directory error
	if dir == "" {
		dir = "."
	}

	goose.SetBaseFS(migrationsFS)
	defer func() {
		goose.SetBaseFS(nil)
	}()

	return Migrate(db, dir)
}
